--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,14 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+        
+        <!--Spring-data-jpa -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>3.4.0</version>
+		</dependency>
+
     </dependencies>
 
     <build>
@@ -113,7 +121,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>${pmd.version}</version>
-                <executions>
+                <!--<executions>
                     <execution>
                         <id>default-cli</id>
                         <goals>
@@ -121,7 +129,7 @@
                         </goals>
                         <phase>validate</phase>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
