--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=hcl_hackaton
 
 
-<<<<<<< HEAD
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/hackathan
 spring.datasource.username=root
@@ -11,5 +10,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 hackathon.openapi.dev-url=http://localhost:8080 
-=======
->>>>>>> fced052af314c44d36470a9e7bb00f052ef2b4bf
+
+#Logging configs
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.actuate.endpoint.web=DEBUG
+
+# Log output format and location
+logging.file.name=./logs/application.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
