--- a/src/main/resources/error_messages.properties
+++ b/src/main/resources/error_messages.properties
@@ -4,4 +4,4 @@ ERR003=Failed to create a new account
 ERR004=Duplicate account number, account already exists
 ERR005=Insufficient account balance for the transaction
 ERR006=Failed to update account information
-ERR007=Failed to delete the account due to existing dependencies
+ERR007=Invalid Account type
